--- a/client/src/common-components/search-user/SearchUser.module.css
+++ b/client/src/common-components/search-user/SearchUser.module.css
@@ -38,9 +38,10 @@
   border-radius: 5px;
   border: none;
   padding: 5px;
+  margin-right: 15px;
   cursor: pointer;
   background-color: rgb(113, 113, 219);
   color: whitesmoke;
   font-weight: 600;
-  min-width: 240px;
+  min-width: 250px;
 }
