--- a/client/src/pages/Users/styles/UserForm.module.css
+++ b/client/src/pages/Users/styles/UserForm.module.css
@@ -91,6 +91,7 @@
   border-radius: 5px;
   border: none;
   padding: 5px;
+  margin-right: 15px;
   cursor: pointer;
   background-color: darkblue;
   color: whitesmoke;
