--- a/client/src/pages/Transactions/ViewTransaction/ViewTransaction.module.css
+++ b/client/src/pages/Transactions/ViewTransaction/ViewTransaction.module.css
@@ -98,10 +98,9 @@
 
 .link {
   text-decoration: none;
-  color: #444;
   cursor: pointer;
-  padding: 5px;
-  border-radius: 2px;
+  margin-left: 10px;
+  color: #444;
 }
 
 .link.active,
