--- a/client/src/pages/Transactions/CreateTransaction/pdf.module.scss
+++ b/client/src/pages/Transactions/CreateTransaction/pdf.module.scss
@@ -3,6 +3,7 @@
   margin: 0 auto;
   width: 44mm;
   background: #FFF;
+  
 
 
   ::selection {
@@ -111,5 +112,11 @@
     p {
       text-align: center;
     }
+  }
+}
+
+@media print {
+  .invoicePOS {
+    page-break-after: always;
   }
 }
